<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mSend"
        android:icon="@drawable/ic_send_2"
        android:title="@string/send_text" />

    <item
        android:id="@+id/mReceive"
        android:icon="@drawable/ic_receive"
        android:title="@string/receive_text" />

    <item
        android:id="@+id/mHistory"
        android:icon="@drawable/ic_history"
        android:title="@string/history_title" />

    <item
        android:id="@+id/mBackup"
        android:icon="@drawable/ic_restore"
        android:title="@string/backup_funds" />

    <item
        android:id="@+id/mSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/mDrop"
        android:icon="@drawable/ic_delete"
        android:title="@string/drop_wallet" />

</menu>