<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="0dp"
    android:paddingTop="8dp"
    android:paddingEnd="0dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/mIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/btc_description_text"
        android:src="@mipmap/ic_btc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mOperationKind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/operation_kind_sample"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/mIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/status_sample_text"
        android:textColor="@color/red_color"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/mOperationKind"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:singleLine="false"
        android:text="@string/time_sample_text"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/mFee"
        app:layout_constraintStart_toEndOf="@+id/mIcon"
        app:layout_constraintTop_toBottomOf="@+id/mOperationKind" />

    <TextView
        android:id="@+id/mAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/amount_sample_text"
        android:textAlignment="textEnd"
        android:textColor="@color/green_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mStatus"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fee_sample_text"
        android:textAlignment="textEnd"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mAmount" />

    <View
        android:id="@+id/mDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTime" />

</android.support.constraint.ConstraintLayout>