<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ReceiveCoinsActivity">

    <ImageView
        android:id="@+id/mQrCode"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/br_qrcode_frame"
        android:contentDescription="@string/qr_receive_description"
        android:onClick="handlerCopyToClipboard"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/mAddressToReceive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/address_sample"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mQrCode" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mRequestDetailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mAddressToReceive">

        <ImageButton
            android:id="@+id/mRefreshQrCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/qrcode_refresh_description"
            android:onClick="handlerRefreshCode"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mAmountToRequestCaption"
            app:srcCompat="@drawable/ic_refresh" />

        <TextView
            android:id="@+id/mAmountToRequestCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/amount_text"
            app:layout_constraintStart_toEndOf="@+id/mAssetImage"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mAmountToRequest"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/balance_sample_text"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/mRefreshQrCode"
            app:layout_constraintStart_toEndOf="@+id/mAssetImage"
            app:layout_constraintTop_toBottomOf="@+id/mAmountToRequestCaption"
            tools:targetApi="o" />

        <ImageView
            android:id="@+id/mAssetImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btc_description_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/img_bitcoin" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:onClick="handlerShareRequest"
        android:text="@string/request_payment_text"
        android:textColor="?attr/buttonTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mRequestDetailLayout" />
</android.support.constraint.ConstraintLayout>